# tagsoup-megaparsec

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  stack.yaml  tagsoup-megaparsec.cabal
src/Text/Megaparsec/: TagSoup.hs
test/: Spec.hs
