name:                tagsoup-megaparsec
version:             0.3.0.0
synopsis:            A Tag token parser and Tag specific parsing combinators
description:         Please see README.md
homepage:            https://github.com/kseo/tagsoup-megaparsec#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           BSD3
category:            XML
build-type:          Simple
tested-with:         GHC == 7.10.1, GHC == 8.0.1
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  manual:      True
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Text.Megaparsec.TagSoup
  build-depends:       base         >= 4.7  && < 5
                     , containers   >= 0.5  && < 0.7
                     , megaparsec   >= 7.0  && < 8.0
                     , tagsoup      >= 0.13 && < 0.15
                     , parser-combinators >= 1.0 && < 2.0

  if !impl(ghc >= 8.0)
    -- packages providing modules that moved into base-4.9.0.0
    build-depends:     semigroups   == 0.18.*

  ghc-options:         -Wall -fno-warn-orphans
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010

test-suite tagsoup-megaparsec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , megaparsec
                     , hspec
                     , megaparsec
                     , raw-strings-qq
                     , tagsoup
                     , parser-combinators
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Text.Megaparsec.TagSoup


source-repository head
  type:     git
  location: https://github.com/kseo/tagsoup-megaparsec
